# iris

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  iris.json
.github/workflows/: chocolatey.yml  ci.yml  release.yml  scoop.yml
.project/: roadmap.md
assets/defaults/: iris.toml
assets/defaults/categories/: docs.toml
assets/defaults/presets/: docs.toml
bucket/: iris.json
chocolatey/: iris.nuspec
chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
scripts/hooks/: install-hooks.sh  pre-push
src/: main.rs
src/cli/: cli_parser.rs  mod.rs  shell_completion.rs
src/config/: config_edit.rs  config_init.rs  config_parser.rs  config_reset.rs  config_show.rs  mod.rs
src/config/config_processor/: mod.rs  process_general.rs  process_presets.rs  process_utils.rs
src/config/config_validator/: general.rs  mod.rs  presets.rs  tests.rs  validate_general.rs  validate_presets.rs
src/core/: mod.rs
src/core/resolver/: dest_base_resolver.rs  mod.rs  target_resolver.rs
src/core/sort/: sort.rs
src/paths/: config_path.rs  mod.rs  path_resolve.rs
src/platform/: mod.rs
src/platform/windows/: context_menu.rs  mod.rs
