[package]
name = "iris-cli"
version = "1.2.0"
edition = "2021"
authors = ["lordaimer <araneaimer@gmail.com>"]
description = "Smart file organization"
license = "MIT"
repository = "https://github.com/lordaimer/iris"
readme = "README.md"
homepage = "https://github.com/lordaimer/iris"
keywords = ["cli", "organizer", "automation", "filesystem", "sorter"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "iris"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
colored = "3.0.0"
dirs = "6.0.0"
edit = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
toml_edit = "0.23.7"
which = "8.0.0"
tempfile = "3.23.0"
anyhow = "1.0.100"
shellexpand = "3.1.1"
dunce = "1.0.5"
walkdir = "2"
blake3 = "1"
rayon = "1.10"
clap_complete = "4.5.62"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[build-dependencies]
winres = "0.1.12"
